$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2008-12-23 [B] Fixed issue involving display of name field in the report to admin form {TranzNDance}
2008-11-09 [B] Added missing translation to German language files (thread ID 56204) {GauGau}
2008-10-20 [M] Re-did the credits section of the language files for easier future integration into cpg1.5.x {GauGau}
2008-10-19 [O] Removed double ; at line ends (thread ID 51899) {GauGau}
2008-10-19 [C] Fixed validation issue with registration screen (thread ID 51310) {GauGau}
2008-10-18 [B] Added error message if pic editor is being run with missing parameters or without authorization (thread ID 54414) {GauGau}
2008-10-18 [B] Fixed error message in ecard.php that complained about wrong recipient email although sender email is wrong (thread ID 50844) {GauGau}
2008-10-18 [C] Fixed minor smilies issue (thread ID 52804) {GauGau}
2008-10-18 [B] Fixed upload permission issue for bridged galleries (thread ID 50798) {GauGau}
2008-10-18 [C] Improved improper translation (thread ID 50460) {GauGau}
2008-10-08 [B] Corrected SMF2 anonymous user fix {Nibbler}
2008-09-17 [O] Reduced memory usage of keyword manager {Nibbler}
2008-09-06 [A] Added Croation language file (user contribution) {GauGau}
2008-08-11 [B] Fixing thumbnail dimension calculation rounding error {Nibbler}
2008-08-07 [M] Updated version count from cpg1.4.19 to cpg1.4.20 in subversion repository as a preparation for the next release {GauGau}
2008-08-03 [M] Release of cpg1.4.19 {GauGau}
2008-08-01 [B] Fixed profile email check issue (thread ID 52391) {Nibbler}