@@ -990,6 +990,12 @@ function update_user($user_id)
 
     cpg_db_query($sql_update);
 
+    // Update pictures' owner name
+    cpg_db_query("UPDATE {$CONFIG['TABLE_PICTURES']} SET owner_name = '$user_name' WHERE owner_id = $user_id");
+
+    // Update comments' author name
+    cpg_db_query("UPDATE {$CONFIG['TABLE_COMMENTS']} SET msg_author = '$user_name' WHERE author_id = $user_id");    
+
     // If send login data checkbox is checked then send the username and password to the user in an email
     if ($superCage->post->keyExists('send_login_data') && trim($user_email)) {
         require('include/mailer.inc.php');
